# Base-Application

./: .gitignore  BUILD_GUIDE.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  FILESYSTEM_GUIDE.md  FILESYSTEM_IMPLEMENTATION.md  README.md  WINDOW_MANAGER_GUIDE.md  build-x64.bat  imgui.ini  launch.vs.json  settings.ini  split_window_functions.py
docs/: DATABASE_BUILD_SUMMARY.md  DATABASE_CONNECTION_WINDOW.md  DATABASE_SYSTEM.md  DatabaseInspection.md  DatabaseInspectionWindows.md  DatabaseSchemaViewing.md  IMPLEMENTATION_SUMMARY.md  MS_ACCESS_IMPLEMENTATION_SUMMARY.md  MS_ACCESS_SCHEMA_FIX.md  MS_ACCESS_SUPPORT.md  MULTI_CONNECTION_FEATURE.md  SCHEMA_VIEWING_IMPLEMENTATION.md  SETTINGS_GUIDE.md
include/: Application.h  OpenGLFunctions.h  Settings.h  WindowFunction.h  WindowManager.h  pch.h
include/Tools/: FileSystem.h  HTTPClient.h  ImPlotClient.h  Logger.h  SimpleIni.h
include/Tools/Database/: Database.h  DatabaseManager.h  Field.h  Table.h
include/Tools/Web/: WebServer.h
include/WindowFunctions/: OpenGLFunctions.h  WindowFunction.h  WindowFunctions.h
src/: Application.cpp  Settings.cpp  WindowFunction.cpp  WindowManager.cpp  main.cpp
src/Tools/: FileSystem.cpp  HTTPClient.cpp  ImPlotClient.cpp  Logger.cpp  Settings.cpp
src/Tools/Database/: Database.cpp  DatabaseManager.cpp  Field.cpp  Table.cpp
src/Tools/Web/: HTTPClient.cpp  WebServer.cpp
src/WindowFunctions/: WindowFunction.cpp  WindowFunctions.cpp  WindowFunctions_Core.cpp  WindowFunctions_Database.cpp  WindowFunctions_FileSystem.cpp  WindowFunctions_Web.cpp  WindowManager.cpp
src/WindowFunctions/Database/: README_Implementation.md  WindowFunctions_DatabaseConnection.cpp  WindowFunctions_DatabaseObjects.cpp
